--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,18 +12,21 @@ body {
   margin: 0;
   padding: 0;
   animation: backgroundAnimation 10s 1;
-  }
-  @keyframes backgroundAnimation {
+}
+
+@keyframes backgroundAnimation {
   0% {
-  background-color: #001233;
+    background-color: #001233;
   }
+
   30% {
-  background-color: #5a6c8d;
+    background-color: #243555;
   }
+
   100% {
-  background-color: #001233;
+    background-color: #001233;
   }
-  }
+}
 
 .trapezoid1 {
   height: 95px;
@@ -32,6 +35,7 @@ body {
   border-radius: 0px 0px 50px 50px;
   margin: 0px 0px 0px 200px;
 }
+
 .trapezoid2 {
   height: 95px;
   width: 550px;
@@ -58,9 +62,12 @@ body {
   font-size: 23px;
   color: #001233;
 }
+
+
 .login username {
   margin-top: 70px;
 }
+
 .login password {
   margin-top: 50px;
 }
@@ -106,6 +113,8 @@ body {
   display: block;
   border: 5px solid #f55759;
   border-radius: 50px;
+  width:500px ;
+  height: 500px;
 }
 .desc {
   font-size: 20px;
@@ -126,6 +135,8 @@ body {
   color: #f55759;
   font-size: 24px;
 }
+
+
 .register p {
   margin: 3px;
 }
@@ -166,6 +177,7 @@ body {
   padding-top: 10px;
   font-size: 14px;
 }
+
 /*Forgot Password*/
 .forgotpassword {
   background-color: white;
@@ -209,6 +221,7 @@ body {
   font-size: 23px;
   color: #001233;
 }
+
 /* HOME SCREEN */
 .menu-bar {
   background-color: #001233;
@@ -232,7 +245,7 @@ body {
   display: flex;
 }
 
-.DownloadButt{  
+.DownloadButt {
   text-align: center;
   padding: 10px 20px;
   background-color: #f55759;
@@ -262,6 +275,7 @@ body {
 .img {
   display: none;
 }
+
 .photo {
   display: flex;
   justify-content: center;
@@ -287,7 +301,7 @@ body {
   border-style: dashed;
 }
 
-  
+
 .imglbl .uploaded-image-preview {
   display: block;
   margin: auto;
@@ -311,12 +325,14 @@ body {
   margin-top: 200px;
   margin-left: 200px;
 }
+
 .home-title {
   font-size: 80px;
   font-weight: 1000;
   color: #f55759;
   width: 700px;
 }
+
 .home-desc {
   color: #ecdcc5;
   font-size: 25px;
@@ -334,6 +350,7 @@ body {
   font-family: "BeVietnam";
   margin-bottom: 30px;
 }
+
 .upload-status {
   background-color: #ecdcc5;
   width: 300px;
@@ -343,12 +360,13 @@ body {
   border-color: #f55759;
   border-style: dashed;
 }
+
 .Upscale {
   margin-right: 120px;
   margin-bottom: 30px;
 }
 
-.Upscale1{
+.Upscale1 {
   margin-top: 400px;
   margin-left: 80px;
 
@@ -377,6 +395,7 @@ body {
   font-size: 24px;
   margin-top: 118px;
 }
+
 .upscale-title {
   color: #ecdcc5;
   font-size: 24px;
@@ -387,34 +406,36 @@ body {
   border-radius: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
-  }
+}
 
-  .upscaled-image{
-    border: 2px solid #f55759;
-    
-  }
+.upscaled-image {
+  border: 2px solid #f55759;
 
-.upscale-grid{
+}
+
+.upscale-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-left: 50px;
 }
 
-.uploaded-image-container{
+.uploaded-image-container {
   background-color: #ecdcc5;
   max-width: 100%;
   max-height: 100%;
   width: 100%;
   height: 100%;
 }
-.uploaded-image-container{
+
+.uploaded-image-container {
   background-color: #ecdcc5;
   max-width: 100%;
   max-height: 100%;
   width: 100%;
   height: 100%;
 }
-.upscaled-image-container{
+
+.upscaled-image-container {
   background-color: #ecdcc5;
   max-width: 100%;
   max-height: 100%;
@@ -473,11 +494,13 @@ body {
   border-width: 1px;
   border-color: black;
 }
+
 .prem-monthly button,
 .prem-yearly button {
   margin-top: auto;
   margin-bottom: 50px;
 }
+
 .prem-monthly,
 .prem-yearly {
   display: flex;
