--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="login-column">
-      <section>
+      <section class="form-style">
         <div class="trapezoid1"></div>
         <div class="forgotpassword">
           <p class="forgotpassDisc">
@@ -32,7 +32,7 @@
         </div>
         <div class="trapezoid2"></div>
       </section>
-      <section>
+      <section class="desc-style">
         <div class="description">
           <img
             class="logo"
@@ -41,15 +41,13 @@
           />
           <img
             class="sample"
-            src="../static/utils/images/sample.png"
+            src="../static/utils/images/UpdatedSample3.jpg"
             alt="Sample Pic"
           />
           <p class="desc">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut
-            metus ut velit maximus gravida sed a elit. Donec nisi velit,
-            vehicula sit amet sodales in, placerat eget nisi. Ut consectetur
-            scelerisque est, eu finibus orci congue quis. Aliquam cursus vel
-            eros eget dictum. Sed tempor lorem tincidunt convallis molestie.
+            PixelPic is a website that is used to upscale low-res images. 
+            Upload your photo and get a sharper, more vibrant version. Easy to use, 
+            and perfect for anyone who wants to improve their photos. Try PixelPic today!
           </p>
         </div>
       </section>
