--- a/templates/go_premium.html
+++ b/templates/go_premium.html
@@ -23,29 +23,31 @@
       <div>
         <p class="prem-title">GO PREMIUM</p>
         <p class="prem-desc">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut
-          metus ut velit maximus gravida sed a elit. Donec nisi velit, vehicula
-          sit amet sodales in, placerat eget nisi. Ut consectetur scelerisque
-          est, eu finibus orci congue quis. Aliquam cursus vel eros eget dictum.
-          Sed tempor lorem tincidunt convallis molestie.
+          Upgrade your experience and take full advantage of our image 
+          upscaler website by joining our premium membership. With our 
+          premium account, you'll enjoy exclusive benefits and enhanced 
+          features that will elevate your image enhancement journey.
         </p>
       </div>
     </section>
     <div class="prem-column">
       <section>
         <div class="prem-free">
-          <p>Free</p>
+          <p>Basic</p>
+          <h2>Free</h2>
         </div>
       </section>
       <section>
         <div class="prem-monthly">
           <p>Monthly</p>
+          <h2>$9.99 per month</h2>
           <button>Buy</button>
         </div>
       </section>
       <section>
         <div class="prem-yearly">
           <p>Yearly</p>
+          <h2>$99.99 per year</h2>
           <button>Buy</button>
         </div>
       </section>
