--- a/templates/login_screen.html
+++ b/templates/login_screen.html
@@ -9,7 +9,7 @@
   <body>
     <form method="POST" action="{{ url_for('login') }}">
       <div class="login-column">
-        <section>
+        <section class="form-style">
           <div class="trapezoid1"></div>
           <div class="login">
             <p class="email" for="email">Email</p>
@@ -34,7 +34,7 @@
           </div>
           <div class="trapezoid2"></div>
         </section>
-        <section>
+        <section class="desc-style">
           <div class="description">
             <img
               class="logo"
@@ -43,7 +43,7 @@
             />
             <img
               class="sample"
-              src="static\utils\images\UpdatedSample.png"
+              src="static\utils\images\UpdatedSample.jpg"
               alt="Sample Pic"
             />
             <p class="desc">
