--- a/templates/register_screen.html
+++ b/templates/register_screen.html
@@ -9,7 +9,7 @@
   <body>
     <form method="POST" action="{{ url_for('register') }}">
       <div class="login-column">
-        <section>
+        <section class="form-style">
           <div class="trapezoid1"></div>
           <div class="register">
             <p class="first-name">First Name</p>
@@ -39,7 +39,7 @@
           </div>
           <div class="trapezoid2"></div>
         </section>
-        <section>
+        <section class="desc-style">
           <div class="description">
             <img
               class="logo"
@@ -48,7 +48,7 @@
             />
             <img
               class="sample"
-              src="static\utils\images\UpdatedSample.png"
+              src="../static/utils/images/UpdatedSample2.png"
               alt="Sample Pic"
             />
             <p class="desc">
