--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -281,6 +281,7 @@ body {
   display: none;
 }
 
+
 .photo {
   display: flex;
   justify-content: center;
@@ -362,7 +363,8 @@ body {
 }
 
 .Upscale {
-  margin-right: 120px;
+  margin-right: auto;
+  margin-left: auto;
   margin-bottom: 30px;
 }
 
